roles/kubeflow/templates/tensorboards-web-app-loadbalancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tensorboards-web-app-service
  namespace: kubeflow
  annotations:
    nginx.ingress.kubernetes.io/proxy-protocol: "true"
  labels:
    app: tensorboards-web-app
    kustomize.component: tensorboards-web-app
    run: tensorboards-web-app
spec:
  selector:
    app: tensorboards-web-app
    kustomize.component: tensorboards-web-app
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  type: LoadBalancer
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: ml-pipeline-ui
#  namespace: kubeflow
#  annotations:
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#spec:
#  rules:
#    - host: ml-pipeline-ui.jtest.suse.com
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: ml-pipeline-ui
#                port:
#                  name: http
